testsuite/poke.pkl/scons-diag-2.pk
/* { dg-do compile } */

deftype Foo = struct { int i; long j; };

defvar a = Foo { i = "invalid type"; };  /* { dg-error "" } */
